--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -4,6 +4,9 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="/assets/application_jquery.js" type="text/javascript"></script>
 </head>
+<% provide(:title, 'Оформление заявки') %>
+<h1>Оформление заявки</h1>
+
 <div class="row">
   <div class="span6 offset3">
     <%= form_for @requistion, :html => {:class => "form-vertical center"} do |f| %>
@@ -61,7 +64,14 @@
         <div class="form-group">
           <%= f.label :'№ договора:', class: "col-md-4 control-label" %>
           <div class="col-md-8">
-            <%= text_field_tag :contract_id, :placeholder => "Введите № договора", class: "form-control" %>
+            <%= text_field_tag :contract, nil, :placeholder => "Введите № договора", class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :'Период договора:', class: "col-md-4 control-label" %>
+          <div class="col-md-8">
+            <%= text_field_tag :period_contract, nil, :placeholder => "Введите время окончания договора", class: "form-control" %>
           </div>
         </div>
 
