--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -5,7 +5,7 @@
   <script src="/assets/application_jquery.js" type="text/javascript"></script>
 </head>
 
-<% provide(:title, 'Sign up') %>
+<% provide(:title, 'Подача заявки') %>
 <h1>Электронная заявка</h1>
 
 <div class="row">
@@ -49,7 +49,7 @@
         <div class="form-group">
           <%= f.label :'Тип работ', class: "col-md-4 control-label" %>
           <div class="col-md-8">
-            <%= f.select:type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']], class: "form-control" %>
+            <%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']],  class: "form-control" %>
           </div>
         </div>
 
