--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= yield(:title) %></title>
-    <%= stylesheet_link_tag "application", {media: "all", "data-turbolinks-track" => true} %>
-    <%#= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= csrf_meta_tags %>
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <header>
-      <%= render 'layouts/header' %>
-    </header>
-    <div class="container">
-      <%= yield %>
-      <footer class="footer">
+	<head>
+	<meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title><%= yield(:title) %></title>
+	<%= stylesheet_link_tag "application", {media: "all", "data-turbolinks-track" => true} %>
+	<%#= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	<%= csrf_meta_tags %>
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	</head>
+	<body>
+		<header>
+			<%= render 'layouts/header' %>
+		</header>
+		<div class="container">
+			<%= yield %>
+			<br>
+		</div>
+		<footer class="footer">
+			<%#= render 'layouts/footer' %>
+			<%= debug(params) if Rails.env.development? %> 
+		</footer>
 
-      <%= render 'layouts/footer' %>
-    </footer>
-    </div>
-     
-  </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </html>
