change view form for new requistion

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,12 @@
 			<a class="navbar-brand" id="logo" href="/">Заявки онлайн</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav">
+				<li><a href="new"><span class="glyphicon glyphicon-envelope"></span>&nbsp Подать заявку</a></li>
+			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="signup"><span class="glyphicon glyphicon-user"></span>Зарегистрироваться</a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Войти</a></li>
+				<li><a href="signup"><span class="glyphicon glyphicon-user"></span>&nbsp Зарегистрироваться</a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>&nbsp Войти</a></li>
 			</ul>
 		</div>
 	</div>	
