--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -1,60 +1,62 @@
 <% provide(:title, 'Подача заявки') %>
 <h1>Электронная заявка</h1>
 
-<div class="row">
-  <div class="span6 offset3">
-    <%= form_for @requistion, :html => {:class => "form-vertical center"} do |f| %>
-        <div class="form-group">
-          <%= f.label :'Обект:', class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.text_field :object, :placeholder => "Введите № объекта", class: "form-control" %>
-          </div>
-        </div>
+<div class="row"> 
+	<%= form_for @requistion, :html => {:class => "form-horizontal"} do |f| %>
+		<div class="form-group">
+			<label class="control-label col-md-3">Объект</label>
+			<div class="col-md-4">
+			<%= f.text_field :object, :placeholder => "Введите № объекта", class: "form-control" %>
+			</div>
+		</div>
 
-        <div class="form-group">
-          <%= f.label :'Главный адрес объекта:', class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.text_field :main_address, :placeholder => "Введите главный адрес оъекта", class: "form-control" %>
-          </div>
-        </div>
+		<div class="form-group">
+			<label class="control-label col-md-3">Главный адрес объекта</label>
+			<div class="col-md-4">
+			<%= f.text_field :main_address, :placeholder => "Введите главный адрес оъекта", class: "form-control" %>
+			</div>
+		</div>
 
-        <div class="form-group">
-          <%= f.label :'Адресс прибытия специалистов:', class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.text_field :arrival_address, :placeholder => "Введите адрес прибытия специалистов", class: "form-control" %>
-          </div>
-        </div>
+		<div class="form-group">
+			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-4">
+			<%= f.text_field :arrival_address, :placeholder => "Введите адрес прибытия специалистов", class: "form-control" %>
+			</div>
+		</div>
 
-        <div class="form-group">
-          <%= f.label :'Контактное лицо', class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.text_field :contact_name, :placeholder =>"Введите контактное лицо", class: "form-control" %>
-          </div>
-        </div>
+		<div class="form-group">
+		  <label class="control-label col-md-3">Контактное лицо</label>
+		  <div class="col-md-4">
+			<%= f.text_field :contact_name, :placeholder =>"Введите контактное лицо", class: "form-control" %>
+			</div>
+		</div>
 
-        <div class="form-group">
-          <%= f.label :"Телефон контактного лица", class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control" %>
-          </div>
-        </div>
+		<div class="form-group">
+		  <label class="control-label col-md-3">Телефон контактного лица</label>
+		  <div class="col-md-4">
+			<%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control" %>
+		</div>
+		</div>
 
-        <div class="form-group">
-          <%= f.label :'Тип работ', class: "col-md-4 control-label" %>
-          <div class="col-md-8">
-            <%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']],  class: "form-control" %>
-          </div>
-        </div>
+		<div class="form-group">
+		  <label class="control-label col-md-3">Тип работ</label>
+		  <div class="col-md-4">
+			<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']], { :prompt => "Выбирите из списка"}, {:class => "form-control"}  %>
+		</div>
+		</div>
 
-        <div class="form-group" id="test" style="display:none">
-          <%= f.label :"Дополнительная информация",  class: "col-md-4 control-label"%>
-          <div class="col-md-8">
-          <%= f.text_field :info, :placeholder =>"Опишите проблему", class: "form-control"%>
-        </div>
-        </div>
+		<div class="form-group" id="test" style="display:none">
+		  <label class="control-label col-md-3">Дополнительная информация</label>
+		  <div class="col-md-4">
+		  <%= f.text_field :info, :placeholder =>"Опишите проблему", class: "form-control"%>
+		</div>
+		</div>
 
-      <%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
-    <% end %>
+		<div class="control-label col-md-3"></div>
+		<div class="col-md-4">
+		<%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
+	</div>
+	<% end %>
   </div>
 </div>
 
