--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,10 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="new"><span class="glyphicon glyphicon-envelope"></span>&nbsp Подать заявку</a></li>
+				<li><a href="/new"><span class="glyphicon glyphicon-envelope"></span>&nbsp Подать заявку</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="signup"><span class="glyphicon glyphicon-user"></span>&nbsp Зарегистрироваться</a></li>
+				<li><a href="/signup"><span class="glyphicon glyphicon-user"></span>&nbsp Зарегистрироваться</a></li>
 				<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>&nbsp Войти</a></li>
 			</ul>
 		</div>
