--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,21 @@
       </h1>
     </section>
   </aside>
-</div>
+
+<% if @user.pairs.any? %>
+<h3>Ваши заявки (<%= @user.pairs.count %>)</h3>
+
+<table class="pretty">
+  <tr>
+    <th><%= "Объект" %></th>
+    <th><%= "Адрес вызова" %></th>
+    <th><%= "Время подачи заявки" %></th>
+    <th><%= "Статус" %></th>    
+  </tr>
+  <% for pair in @user.pairs %>
+    <tr>
+      <%= render pair.requistion %>
+    </tr>
+  <% end %>
+</table>
+<% end %>
