fix_list_requistion

--- a/app/views/requistions/_requistion.html.erb
+++ b/app/views/requistions/_requistion.html.erb
@@ -1,6 +1,5 @@
  <td> <%= requistion.object %> </td>
  <td> <%= requistion.arrival_address %> </td>
- <td> <%= requistion.arrival_address %> </td>
- 
+ <td> <%= requistion.status %> </td>
  <td> Posted <%= time_ago_in_words(requistion.created_at) %> ago. </td>
  
