--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -41,7 +41,7 @@
 		<div class="form-group">
 		  <label class="control-label col-md-3">Тип работ</label>
 		  <div class="col-md-4">
-			<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']], { :prompt => "Выбирите из списка" }, { :class => "form-control" }  %>
+			<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control" }  %>
 		</div>
 		</div>
 
