--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 			<%= render 'layouts/header' %>
 		</header>
 		<div class="container">
+			<% flash.each do |key, value| %>
+				<div class="alert alert-<%= key %>"><%= value %></div>
+			<% end %>
 			<%= yield %>
 			<br>
 		</div>
@@ -27,5 +30,5 @@
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/assets/application_jquery.js" type="text/javascript"></script>
+	<script src="/assets/application_jquery.js" type="text/javascript"></script>
 </html>
