--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -97,14 +97,14 @@
 					</div>
               </div>
 
-            	<div class="row top5">
+            	<!-- <div class="row top5">
 		            <div class="form-group">
-		            	<%= f.label :'Начальник:', class: "col-md-4 control-label" %>
+		            	<#%= f.label :'Начальник:', class: "col-md-4 control-label" %>
 		                <div class="col-md-8">
-		                  <%= select_tag :boss, options_from_collection_for_select(@list_boss, 'id', 'name'), :prompt => "Выберите из списка", :class => "form-control" %>
+		                  <#%= select_tag :boss, options_from_collection_for_select(@list_boss, 'id', 'name'), :prompt => "Выберите из списка", :class => "form-control" %>
 		                </div>
-		            </div>
-          		</div>
+		            </div> -->
+          		</div> 
 
 
 				<%= f.submit "Выезд бригады", class: "btn btn-large btn-primary" %>
