--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,3 +1,4 @@
+<h1>Здравствуйте, <%= @current_user.name %></h1>
 <div class="row">
 <div class="form-group">
       <label class="col-md-4 control-label">Объект</label>
