--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -17,6 +17,21 @@
 			</div>
 		</div>
 
+ 		<div class="form-group">
+			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-4">
+			<%= f.select :building_id, options_from_collection_for_select(@list, 'id', 'arrival_address'), {:prompt => "Выберите из списка адресс прибытия специалистов"}, {:class => "form-control"} %>
+			</div>
+		</div>
+ 
+ <!-- 		<div class="form-group">
+			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-4">
+			<%#= select_tag :building_id, options_groups_from_collection_for_select(current_user.contracts.first, :buildings, :contract_id, :id, :arrival_address), :prompt => "Выберите из списка адресс прибытия специалистов", :class => "form-control" %>
+			</div>
+		</div>
+ -->
+
 		<div class="form-group">
 			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
 			<div class="col-md-4">
@@ -59,4 +74,3 @@
 	<% end %>
   </div>
 </div>
-
