--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,10 @@
 <li>
+<div style="padding: 10px; border: 1px solid black">
   <%= gravatar_for user %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "Удалить", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
   <% end %>
+</div>
 </li>
