--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title><%= yield(:title) %></title>
+	<link rel="shortcut icon" href="http://3v-service.ru/a/favicon.ico" type="image/x-icon">
 	<%= stylesheet_link_tag "application", {media: "all", "data-turbolinks-track" => true} %>
 	<%= javascript_include_tag "application", {media: "all", "data-turbolinks-track" => true} %>
 	<%= csrf_meta_tags %>
@@ -24,6 +25,19 @@
 		</div>
 		<footer class="footer">
 			<%#= render 'layouts/footer' %>
+			<pre>
+			<% if signed_in? %>
+				<% if current_user.admin? %>
+				<span style="color:red" href="#">Администратор</span>
+				<% elsif current_user.client? %>
+				<span style="color:red" href="#">Клиент</span>
+				<% else #worker%>
+				<span style="color:red" href="#">Рабочий</span>
+				<% end %>
+			<% else %>
+			<span style="color:red" href="#">Неавторизированный пользователь</span>
+			<% end %>
+			</pre>
 			<%= debug(params) if Rails.env.development? %> 
 		</footer>
 
