refact some code

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 
 $bgDefault      : #0059A7;
 $bgHighlight    : #43a2ff;
-$colDefault     : #9f9;
+$colDefault     : #bbb;
 $colHighlight   : #ecdbff;
 .navbar-default {
 	background-color: $bgDefault;
