--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Здравствуйте, <%= current_user.name %> вы зашли на объект: <%= @building.name %> по адресу <%= @building.arrival_address %> </h1>
+<h2>Здравствуйте, <%= current_user.name %> вы зашли на объект: <%= @building.name %> по адресу <%= @building.arrival_address %> </h2>
 <% if @list_requistion.any? %>
 <h3>На объект подано заявок (<%= @list_requistion.count %>)</h3>
 <table class="pretty">
@@ -22,11 +22,12 @@
   <% end %>
 </table>
 <% else %>
-<h1>Для вас на объект заявок нет</h1>>
+<h1>Для вас на объект заявок нет</h1>
 <% end %> 
 
-<%= button_to "Прибыл", {:action => 'check_in'}, {:method => :get } %>
-<%= button_to "Отбыл", {:action => 'check_out'}, {:method => :get } %>
+<%= link_to "Прибыл", {:action => 'check_in'}, {:class => "btn btn-large btn-primary"} %>
+<%= link_to "Отбыл", {:action => 'check_out'}, {:class => "btn btn-large btn-primary"} %>
+<br>
 
 <!-- <div class="row">
 <div class="form-group">
