rewrite show view for requistions show

--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Заполнение объекта') %>
-<h1>Объекты</h1>
+<% provide(:title, 'Добавление объекта') %>
+<h2>Добавление объекта</h2>
 
 	<%= form_for @building, :html => {:class => "form-horizontal"} do |f| %>
 		<div class="row"> 
