--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,1 +1,15 @@
-<h1>Список объектов</h1>
+<h1>Все объекты</h1>
+ 
+<table class="table">
+  <tr>
+    <th>Номер</th>
+    <th>Адрес</th>
+  </tr>
+ 
+  <% @buildings.each do |b| %>
+    <tr>
+      <td><%= b.name %></td>
+      <td><%= b.main_address %></td>
+    </tr>
+  <% end %>
+</table>
