--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 <div class="row">
 <div class="col-md-7">
 	<h3>Ваши контракты (<%= @user.contracts.count %>)</h3>
-	<table class="table-bordered">
+	<table class="table table-bordered table-striped">
 		<tr>
 			<th><%= "Контракт" %></th>
 			<th><%= "Название компании" %></th>
@@ -50,7 +50,7 @@
 <div class="col-md-7">
 	<h3>Ваши заявки (<%= @user.pairs.count %>)</h3>
 
-	<table class="table-bordered">
+	<table class="table table-bordered table-striped">
 		<tr>
 			<th><%= "Объект" %></th>
 			<th><%= "Адрес вызова" %></th>
