--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,5 +1,20 @@
-<h2>Здравствуйте, <%= current_user.name %> вы зашли на объект:
- <%= @building.name %> по адресу <%= @building.arrival_address %> </h2>
+<h2>Информация об объкте</h2>
+
+<div class="row">
+<div class="col-md-7">
+  <h1>Все объекты</h1>
+  <table class="table table-bordered">
+    <tr>
+      <th>Объукт</th>
+      <th><%= @building.name %></th>
+    </tr>
+    <tr>
+      <td>Адрес</td>
+      <td><%= @building.arrival_address %></td>
+    </tr>
+  </table>
+</div>
+</div>
 
 <% if @list_requistion.any? %>
 <h3>На объект подано заявок (<%= @list_requistion.count %>)</h3>
@@ -24,7 +39,7 @@
   <% end %>
 </table>
 <% else %>
-<h1>Для вас на объект заявок нет</h1>
+<h4>Для вас на объект заявок нет</h4>
 <% end %> 
 
 <%= link_to "Прибыл", {:action => 'check_in'}, {:class => "btn btn-large btn-primary"} %>
