--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<%# provide(:title, 'Home') %>
+<% provide(:title, 'Заявки') %>
 <div class="center jumbotron">
   <h1>Добро пожаловать в сервис онлайн заявок</h1> 
 
@@ -9,4 +9,3 @@
   <%= link_to "Зарегестрируйтесь сейчас!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
-<%#= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'  %>
