--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <div class="pagination">
 <%= will_paginate previous_label:"предыдущая", next_label:"следующая" %>
 </div>
-<ul class="users">
+<ul class="users-list">
   <% @users.each do |user| %>
     <%= render user %>
   <% end %>
