--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>                        
         	</button>
 			<a class="navbar-brand" href="/">
-			<img style="height: 20px; border:1px solid black;"src="http://3v-service.ru/a/favicon.ico">
+			<%=image_tag("Logo.png", size: "39x50", class: "logo", alt: "ЗВ")%>
 			&nbspЗаявки онлайн</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">			
