--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,19 +3,38 @@
 
 $bgDefault      : #0059A7;
 $bgHighlight    : #43a2ff;
-$colDefault     : #9f9;
-$colHighlight   : #ecdbff;
+$colDefault     : rgb(54, 54, 54);
+$colHighlight   : rgb(95, 141, 218);
+
+$blue1 : rgb (0, 71, 187);
+$gray1 : rgb (131, 148, 184);
+$purple1 : rgb (104, 71, 141);
+$lightblue1 : rgb(95, 141, 218);
+$darkblue1 : rgb (68, 73, 156);
 .navbar-default {
-	background-color: $bgDefault;
-	border:none;
-	border-radius: 0;
+	font-family: "Din Round Pro";
+	background-color: rgb(255, 255, 255);
+	height: 70px;
+	background-image: url(http://www.3v-online.ru/images/header_bg.jpg);
+	background-repeat: repeat-x;
+	border-bottom-color: rgb(138, 182, 198);
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	// border:none;
+	// border-radius: 0;
+	.logo {
+		margin-top: -8px;
+	}
 	.navbar-brand {
 		color: $colDefault;
+		font-size: 25px;
 		&:hover, &:focus { 
 			color: $colHighlight; }}
 	.navbar-text {
-		color: $colDefault; }
+		color: $colDefault; 
+	}
 	.navbar-nav {
+		margin-top: 10px;
 		> li {
 			> a {
 				color: $colDefault;
@@ -52,5 +71,55 @@ $colHighlight   : #ecdbff;
 			> a, > a:hover, > a:focus, {
 				color: $colHighlight;
 				background-color: $bgHighlight; }}}
+}
+
+.form-control:focus{
+    border-color: $purple1 !important;
+}
+
+
+.btn{
+  background-color: hsl(203, 100%, 32%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#007dcc", endColorstr="#0064a3");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#007dcc), to(#0064a3));
+  background-image: -moz-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -ms-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #007dcc), color-stop(100%, #0064a3));
+  background-image: -webkit-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -o-linear-gradient(top, #007dcc, #0064a3);
+  background-image: linear-gradient(#007dcc, #0064a3);
+  border-color: #0064a3 #0064a3 hsl(203, 100%, 30%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13);
+  -webkit-font-smoothing: antialiased;
+}
+
+.bg {
+		margin-top: 0px;
+
+}
+
+.jumbotron {
+	margin-top: 15px;
+	font-family: "Din Round Pro";
+	background-image: url('Bg.png');
+	height: 285px;
+	h1 {
+		font-weight: 600;
+		margin-top: -30px;
+	}
+
+}
+
+.btnhome {
+	margin-top: 35px;
+}
+h1, .btn, p, label {
+	font-family: "Din Round Pro";
+}
+
+.container {
+	margin-top: -20px;
 }
 
