--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,19 +1,20 @@
 <%# provide(:title, 'Home') %>
+<div class="bg">
 <div class="center jumbotron">
   <h1>Добро пожаловать в сервис онлайн заявок</h1> 
 
-  <h2>
+ <!--  <h2>
     Приложение стремительно расширяется
-  </h2>
-
-  <%= link_to "Зарегестрируйтесь сейчас!", signup_path, class: "btn btn-large btn-primary" %>
+  </h2> -->
+  <%= link_to "Зарегистрируйтесь!", signup_path, class: "btn btn-large btn-primary btnhome" %>
+</div>
 </div>
 
 <%#= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'  %>
 
 <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="col-md-4"> 
@@ -21,6 +22,6 @@
         </div>
         <div class="col-md-4"> 
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-        </div>
+        </div> -->
       </div>
     </div>
