restyle edit requistions

--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -90,8 +90,9 @@
 			</div>
 
 			<button id="addbtn" type="button" class="btn btn-default btn-s">
-				<span class="glyphicon glyphicon-plus"></span>
+				<span class="glyphicon glyphicon-plus">Добавить исполнителя</span>
 			</button>
+			<br>
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 		
 		<% end %>
