--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -5,7 +5,7 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Объект</label>
-					<input class="col-md-5 control-label" readonly><%= @requistion.object %></input>
+					<input class="col-md-5 control-label" placeholder="<%= @requistion.object %>" readonly></input>
 				</div>
 			</div>
 
