fix bug in readonly inputs to edit requistions

--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -13,14 +13,14 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Главный адрес</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.main_adress %>" readonly></input>
+					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Адрес вызова</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.arrival_adress %>" readonly></input>
+					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.arrival_address %>" readonly></input>
 				</div>
 			</div>
 
