--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -5,7 +5,7 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Объект</label>
-					
+					<input class="col-md-5 form-control" type="text" placeholder="<%= @requistion.object %>" readonly></input>
 				</div>
 			</div>
 
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Главный адрес</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
+					<input class="col-md-5 form-control" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
 				</div>
 			</div>
 
