fix bug in readonly inputs to edit requistions

--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -5,7 +5,9 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Объект</label>
-					<input class="col-md-5 form-control" type="text" placeholder="<%= @requistion.object %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= @requistion.object %>" readonly></input>
+					</div>
 				</div>
 			</div>
 
@@ -13,14 +15,18 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Главный адрес</label>
-					<input class="col-md-5 form-control" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
+					</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Адрес вызова</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.arrival_address %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= @requistion.arrival_address %>" readonly></input>
+					</div>
 				</div>
 			</div>
 
@@ -28,21 +34,27 @@
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Контактное лицо</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.contact_name %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= @requistion.contact_name %>" readonly></input>
+				</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Время заявки</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= Russian::strftime(@requistion.created_at, "%e %B %Y %H:%M") %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= Russian::strftime(@requistion.created_at, "%e %B %Y %H:%M") %>" readonly></input>
+				</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Контактный телефон</label>
-					<input class="form-control col-md-5" type="text" placeholder="<%= @requistion.contact_phone %>" readonly></input>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= @requistion.contact_phone %>" readonly></input>
+				</div>
 				</div>
 			</div>
 
