--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row" id="worker_row">
 				<div class="form-group">
 					<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 					<div id="workerfield" class="col-md-5">
