--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -5,10 +5,10 @@
 	<thead>
 	<tr>
 		<th>Объект</th>
-		<th>Главный адрес</th>
-		<th>Время заявки</th>
-	    <th>Статус</th>
-        <th></th>
+		<th>|Главный адрес</th>
+		<th>|Время заявки</th>
+	    <th>|Статус</th>
+        <th>|</th>
     </tr>
     </thead>
     <tbody>
