--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,12 +30,12 @@
 			<%= f.password_field :password_confirmation, class: "form-control" %>
 		</div>
 		<br>
-		<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+		<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 		<br>
 		<% end %>
 		<br>
 		<%= gravatar_for @user %>
-		<a href="http://gravatar.com/emails">change</a>
+		<a href="http://gravatar.com/emails">Изменить</a>
 	</div>
 	<div class="col-md-4">
 	</div>
