--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -1,76 +1,76 @@
 <% provide(:title, 'Подача заявки') %>
 <h1>Электронная заявка</h1>
 
-<div class="row"> 
 	<%= form_for @requistion, :html => {:class => "form-horizontal"} do |f| %>
 		<div class="form-group">
-			<label class="control-label col-md-3">Объект</label>
-			<div class="col-md-4">
+
+			<label class=" col-md-3">Объект</label>
+			<div class="col-md-5">
 			<%= f.text_field :object, :placeholder => "Введите № объекта", class: "form-control" %>
-			</div>
+		</div>
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-md-3">Главный адрес объекта</label>
-			<div class="col-md-4">
+			<label class=" col-md-3">Главный адрес объекта</label>
+			<div class="col-md-5">
 			<%= f.text_field :main_address, :placeholder => "Введите главный адрес оъекта", class: "form-control" %>
 			</div>
 		</div>
 
  		<div class="form-group">
-			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
-			<div class="col-md-4">
-			<%= f.select :building_id, options_from_collection_for_select(@list, 'id', 'arrival_address'), {:prompt => "Выберите из списка адресс прибытия специалистов"}, {:class => "form-control"} %>
+			<label class=" col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-5">
+			<%= f.select :building_id, options_from_collection_for_select(@list, 'id', 'arrival_address'), {:prompt => "Выберите из списка адрес прибытия специалистов"}, {:class => "form-control"} %>
 			</div>
 		</div>
  
  <!-- 		<div class="form-group">
-			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
-			<div class="col-md-4">
+			<label class=" col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-5">
 			<%#= select_tag :building_id, options_groups_from_collection_for_select(current_user.contracts.first, :buildings, :contract_id, :id, :arrival_address), :prompt => "Выберите из списка адресс прибытия специалистов", :class => "form-control" %>
 			</div>
 		</div>
  -->
 
 		<div class="form-group">
-			<label class="control-label col-md-3">Адресс прибытия специалистов</label>
-			<div class="col-md-4">
+			<label class=" col-md-3">Адресс прибытия специалистов</label>
+			<div class="col-md-5">
 			<%= f.text_field :arrival_address, :placeholder => "Введите адрес прибытия специалистов", class: "form-control" %>
 			</div>
 		</div>
 
 		<div class="form-group">
-		  <label class="control-label col-md-3">Контактное лицо</label>
-		  <div class="col-md-4">
+		  <label class=" col-md-3">Контактное лицо</label>
+		  <div class="col-md-5">
 			<%= f.text_field :contact_name, :placeholder =>"Введите контактное лицо", class: "form-control" %>
 			</div>
 		</div>
 
 		<div class="form-group">
-		  <label class="control-label col-md-3">Телефон контактного лица</label>
-		  <div class="col-md-4">
+		  <label class=" col-md-3">Телефон контактного лица</label>
+		  <div class="col-md-5">
 			<%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control" %>
 		</div>
 		</div>
 
 		<div class="form-group">
-		  <label class="control-label col-md-3">Тип работ</label>
-		  <div class="col-md-4">
+		  <label class=" col-md-3">Тип работ</label>
+		  <div class="col-md-5">
 			<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control" }  %>
 		</div>
 		</div>
 
 		<div class="form-group" id="test" style="display:none">
-		  <label class="control-label col-md-3">Дополнительная информация</label>
-		  <div class="col-md-4">
+		  <label class=" col-md-3">Дополнительная информация</label>
+		  <div class="col-md-5">
 		  <%= f.text_field :info, :placeholder =>"Опишите проблему", class: "form-control"%>
 		</div>
 		</div>
-
-		<div class="control-label col-md-3"></div>
-		<div class="col-md-4">
-		<%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
-	</div>
+		<div class="form-group">
+			<div class=" col-md-3"></div>
+				<div class="col-md-5">
+					<%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
+				</div>
+		</div>
 	<% end %>
   </div>
-</div>
