--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -1,5 +1,4 @@
-<div class="row">
-<div class="col-md-7">
+<div class="col-md-7 showtable">
   <table class="table table-bordered table-striped">
   <tr>
     <th>Объект</th>
@@ -42,7 +41,6 @@
 <br>
 <%= button_to "Обработать заявку", edit_requistion_path, method: :get, class: "btn btn-large btn-primary" %>
 
-</div>
 </div>
 
 
