--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 			<tr>
 				<td> <%= contract.contract_id %> </td>
 				<td> <%= contract.company %> </td>
-				<td> <%= contract.period_contract %> </td>
+				<td> <%= contract.period %> </td>
 			</tr>
 		<% end %>
 	</table>
