--- a/app/views/requistions/_requistion.html.erb
+++ b/app/views/requistions/_requistion.html.erb
@@ -1,5 +1,6 @@
- <td> <%= requistion.object %> </td>
- <td> <%= requistion.arrival_address %> </td>
+ <th><%= link_to requistion.object,  {:controller => :requistions, :action => :show, :id => requistion.id}, {:method => :get} %></th>
+ <td> <%= Building.find(requistion.building_id).arrival_address %> </td>
+ <td> <%= transcript_of_the_messages(requistion.type_requistion) %> </td>
  <td> <%= requistion.status %> </td>
  <td> <%= time_ago_in_words(requistion.created_at) %> назад </td>
- 
+ 	
